site/src/inventory-item/inventory-item.css
inventory-item {
  display: flex;
  box-sizing: border-box;
  overflow: hidden;
  flex-direction: column;
  position: relative;
  transform: translate3d(0, 0, 1px);
  color: var(--primary-text);
  min-height: 250px;

  visibility: hidden;
}

inventory-item.rendered {
  min-height: unset;
  visibility: visible;
}

.inventory-item__top {
  display: grid;
  grid-template-columns: 2fr 1fr;
  align-items: center;
  transform: translateZ(1px);
  padding: 8px;

  background: rgba(255, 255, 255, 0.05);
}

.inventory-item__details {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-gap: 0 0.5em;
  word-break: keep-all;
  white-space: nowrap;
}

.inventory-item__picture {
  width: 63px;
  min-height: 56px;
  min-width: 63px;
  border: none;
  image-rendering: optimizequality;
}

.inventory-item__bottom {
  display: grid;
  grid-template-columns: 1fr 1fr 2fr auto;
  align-items: center;
  white-space: nowrap;
  grid-gap: 0 8px;
  padding: 8px;
}

.inventory-item__tag-button {
  cursor: pointer;
  margin-left: 6px;
  opacity: 0.35;
  filter: grayscale(100%);
}

.inventory-item__tag-button:hover,
.inventory-item__tag-button--tagged {
  opacity: 1;
  filter: none;
}

.inventory-item__request-checkbox {
  cursor: pointer;
  width: 16px;
  height: 16px;
  justify-self: end;
}

.inventory-item__quantity-bar {
  height: 8px;
  width: 100%;
  transform-origin: left;
}

.inventory-item__picture-container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 45px;
  height: 45px;
  min-width: 50px;
}

.inventory-item__name {
  font-size: 20px;
}

